samples/_failures_safe/1761159026_8d24f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c7f7cb7.c: In function ‘main’:
./samples/SAFE/__tmp_3c7f7cb7.c:145:17: error: expected declaration or statement at end of input
  145 |                 return 1;
      |                 ^~~~~~
./samples/SAFE/__tmp_3c7f7cb7.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c7f7cb7.c:145:17: error: expected declaration or statement at end of input
